# pingtrace

./: CMakeLists.txt  README.md  justfile  ref.md  tests.md
include/: argparser.h  config.h  helpers.h  icmp.h  ping.h  socket.h  trace.h
src/: argparser.c  config.c  helpers.c  icmp.c  main.c  ping.c  socket.c  trace.c
